increased letterspacing on h1 for clarity and reduced padding to prevent wrapping

--- a/shopping-cart/src/components/Header/Header.module.css
+++ b/shopping-cart/src/components/Header/Header.module.css
@@ -40,11 +40,16 @@
   font-family: 'Rubik Doodle Shadow';
   font-size: 2.5rem;
   margin-inline: 0.5rem;
+  letter-spacing: 0.2rem;
 }
 
 @media (max-width: 600px) {
+  .header {
+    padding-inline: 0.5rem;
+  }
   .header h1 {
     font-size: 1.4rem;
+    letter-spacing: 0.1rem;
   }
 
   .header svg {
